<resources>
    <string name="app_name">Nir</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="requestforrent">Request for rent</string>
    <string name="type">Rent Type</string>
    <string name="family">Family</string>
    <string name="beadroom">Bed Room</string>
    <string name="drawingroom">Drawing Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="bathroom">Bath Room</string>
    <string name="balcony">Balcony</string>
    <string name="dinigroom">Dining Room</string>
    <string name="bills">Bills</string>
    <string name="gass">Gass Bill</string>
    <string name="water">Water Bill</string>
    <string name="electricity">Electricity Bill</string>
    <string name="rentprice">Rent Price</string>
    <string name="houseaddress">House Address</string>
    <string name="addphoto">Add Photo</string>
    <string name="address">Address</string>
    <string name="addproperty">Add Property</string>
    <string name="nagotiable">Nagotiabble</string>
    <string name="fixedPrice">Fixed Price</string>
    <string name="filters">Filters</string>
    <string name="search">Filtered Result</string>
    <string name="city">City</string>
    <string name="cityName">Dhaka</string>
    <string name="priceRange">Price Range ( BDT )</string>
    <string name="search_articles_hint">Search Location</string>
    <string name="inputtext">Enter Number</string>
    <string name="sylhet">Sylhet</string>
    <string name="dhaka">Dhaka</string>
    <string name="chittagong">Chittagong</string>
    <string name="naraynganj">Narayana City</string>
    <string name="adittional">Description</string>
    <string name="phoneNumber">Phone Number</string>


    <string-array name="rent_type">
        <item> </item>
        <item>Family</item>
        <item>Bachelor</item>
        <item>Sublet</item>
        <item>Family &amp; Bachelor</item>
    </string-array>

    <string name="Description">Description</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</string>

    <string name="DetailsHeadding">House Name</string>
    <string name="any">Any</string>
    <string name="_0">0</string>
    <string name="number_of_drawing_room">Number of Drawing Room</string>
    <string name="number_of_bead_room">Number of Bead Room</string>
    <string name="number_of_kitchen_room">Number of Kitchen Room</string>
    <string name="number_of_balcony_room">Number of Balcony Room</string>
    <string name="currently_you_have_no_avilable_messages">Currently you have no avilable messages.</string>
    <string name="look_out_for_exciting_messages_from_your_desired_matches">Look out for exciting messages from your  desired matches!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title">House Name</string>
    <string name="book_you_visiting_date">Book you visiting date</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="your_name">Your Name</string>
    <string name="your_number">Your Number</string>
    <string name="confirm">Confirm</string>
    <string name="own">Own</string>
    <string name="select_language">Select Language</string>
    <string name="en">English</string>
    <string name="bn">Bangla</string>
    <string name="change_language">Change Language</string>
    <string name="interior_ai">Interior Ai</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_out">Sign Out</string>
    <string name="bachelor">Bachelor</string>
    <string name="sublet">Sublet</string>
    <string name="family_nbachelor">Family\nBachelor</string>
    <string name="hotel">Hotel</string>
    <string name="shop">Shop</string>
    <string name="number_of_dining_room">Number of Dining Room</string>
    <string name="number_of_bath_room">Number of Bath Room</string>
    <string name="enter_your_house_name">Enter Your House Name</string>
    <string name="are_you_wating_for_something_to_happen">Are you waiting for something to happen?</string>
    <string name="we_will_notify_you_when_something_exciting_and_new_happens">We will notify you when something exciting and new happens!</string>
    <string name="notification">Notification</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="my_listings">My Listings</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="delete">Delete</string>
    <string name="bost_your_post">Bost your post</string>
    <string name="sold">Sold</string>
    <string name="search_properties">Search Properties...</string>
    <string name="appartment">Appartment</string>
    <string name="vila">Vila</string>
    <string name="cottage">Cottage</string>
    <string name="near_for_you">Near For You</string>
    <string name="best_for_you">Best For You</string>
    <string name="we_will_send_you_an_one_time_password_on_your_email">We will send you an One Time Password on your email</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="set_your_new_password">Set Your New Password</string>
    <string name="create_your_new_password_to_login">Create your new password to Login</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continuebutton">Continue</string>
    <string name="successfully_n_registered">Successfully\n Registered</string>
    <string name="congratulations_your_account_has_nbeen_registered_is_this_application">Congratulations, your account has \nbeen registered is this application</string>
    <string name="go_to_home">Go To Home</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_check_your_internet_connection">Please check your internet connection !</string>
    <string name="ok">Ok</string>
    <string name="review_tour_request">Review Tour Request</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="view_details">View Details</string>
    <string name="decline_schedule">Decline Schedule</string>
    <string name="accept_schedule">Accept Schedule</string>
    <string name="oh_no_you_are_not_logged_in">Oh no! You are not logged in?</string>
    <string name="notloginStrign">You need to be a registered  user to view the information. Please Login Now</string>
    <string name="guest_user">Guest User</string>
    <string name="h1">18sp</string>
    <string name="h2">16sp</string>
    <string name="b1">16sp</string>
    <string name="b2">14sp</string>
    <string name="save">Save</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_you_address">Enter you address</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="enter_you_naame">Enter you naame</string>
    <string name="select_type">Select Type</string>
    <string name="select_property_type">Select Property Type</string>
    <string name="have_any_bills">Have any bills</string>
    <string name="current_address">Current Address</string>
    <string name="enter_your_desired_rent_price">Enter your desired rent price</string>
    <string name="details_about_your_property">Details about your property</string>
    <string name="details">Details</string>
    <string name="browse_photo">Browse Photo</string>
    <string name="browse_photos">Browse Photos</string>
    <string name="add_photos">Add Photos</string>
    <string name="family_bachelor"><![CDATA[Family & Bachelor]]></string>
    <string name="edit">Edit</string>
    <string name="booking_cancel">Booking Cancel</string>
    <string name="property_owner_has_rejected_your_request_to_view_the_property">Property owner has rejected your request to view the property</string>
    <string name="no_data_found">No Data Found!</string>

    <string-array name="rangeSlider">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>


    </string-array>


</resources>