<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_top_curve"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/robotomedium"
        android:layout_marginBottom="18dp"/>

    <RadioGroup
        android:id="@+id/languageRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/bachelorRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bachelor"
            android:textSize="16sp"
            android:fontFamily="@font/robotoregular"
            />

        <RadioButton
            android:id="@+id/familyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/family"
            android:textSize="16sp"
            android:fontFamily="@font/robotoregular"
            />

        <RadioButton
            android:id="@+id/subletRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sublet"
            android:textSize="16sp"
            android:fontFamily="@font/robotoregular"
            />

        <RadioButton
            android:id="@+id/famandbanRadidoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/family_bachelor"
            android:textSize="16sp"
            android:fontFamily="@font/robotoregular"
            />



    </RadioGroup>


</LinearLayout>


