<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_top_curve"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <RadioGroup
            android:id="@+id/languageRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/englishRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/en"/>

            <RadioButton
                android:id="@+id/banglaRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bn"/>

            <!-- Add more RadioButtons for other languages as needed -->

        </RadioGroup>


    </LinearLayout>


