<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
  android:background="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"


    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ralewaybold"
        android:padding="5dp"
        android:text="@string/review_tour_request"
        android:textColor="@color/colorSecendaryBlack"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"

        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tourRequestTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/ralewaysemibold"
                android:gravity="center"
                android:text="Tour Request"
                android:textColor="@color/colorSecendaryBlack"
                android:textSize="18dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="#D6D3D3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tourRequestDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/ralewaybold"
                    android:text="@string/date"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tourRequestDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/ralewaybold"
                    android:text="02 Feb 2021"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorSecendaryBlack"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tourRequestTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/ralewaybold"
                    android:text="@string/time"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tourRequestTimeValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/ralewaybold"
                    android:text="10:00 AM"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorSecendaryBlack"
                    android:textSize="18dp" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/viewDetails"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/spinerborder"
                android:drawableRight="@drawable/arrow"
                android:text="@string/view_details" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/declineSchedule"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/spinerborder"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/decline_schedule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/acceptSchedule"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acceptSchedule"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:background="@drawable/spinerborder"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/accept_schedule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/declineSchedule"
        app:layout_constraintTop_toTopOf="@+id/declineSchedule" />

</androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
