<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.Auth.Signin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="270dp"
            android:layout_height="107dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/homeicon"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="151dp"
            android:layout_height="61dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/nirsplash"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />


        <EditText
            android:id="@+id/log_email"
            android:layout_width="335dp"
            android:layout_height="55sp"
            android:layout_marginTop="45dp"
            android:background="@drawable/rectedittext"
            android:drawableStart="@drawable/email"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorSecendaryBlack"
            android:textColorHint="#777777"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <EditText
            android:id="@+id/logpass"
            android:layout_width="335dp"
            android:layout_height="55sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rectedittext"
            android:drawableRight="@drawable/visibility_off"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorSecendaryBlack"
            android:textColorHint="#777777"
            android:longClickable="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/log_email"
            app:layout_constraintStart_toStartOf="@+id/log_email"
            app:layout_constraintTop_toBottomOf="@+id/log_email" />


        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ralewaybold"
            android:text="@string/forgot_password"
            android:textColor="@color/colorSecendaryBlack"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/logpass"
            app:layout_constraintStart_toStartOf="@+id/logpass"
            app:layout_constraintTop_toBottomOf="@+id/logpass" />

        <LinearLayout
            android:id="@+id/Continue"
            android:layout_width="335dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/coustomrectengular"

            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/forgetPassword"
            app:layout_constraintStart_toStartOf="@+id/forgetPassword"
            app:layout_constraintTop_toBottomOf="@+id/forgetPassword">

            <TextView
                android:layout_width="125dp"
                android:layout_height="33dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="110dp"
                android:fontFamily="@font/ralewaybold"
                android:text="@string/continuebutton"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/logprogress_bar"
                android:visibility="gone"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                style="@style/SpinKitView.Large.Wave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:SpinKit_Color="@color/white"
                android:layout_marginStart="2dp"
                />

        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/or2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ralewaysemibold"
            android:text="or"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/Continue"
            app:layout_constraintStart_toStartOf="@+id/Continue"
            app:layout_constraintTop_toBottomOf="@+id/Continue" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/facebook"
            android:layout_width="335dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rectengularfacebook"
            app:layout_constraintEnd_toEndOf="@+id/or2"
            app:layout_constraintStart_toStartOf="@+id/or2"
            app:layout_constraintTop_toBottomOf="@+id/or2">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/facebook" />


            <TextView
                android:layout_width="165dp"
                android:layout_height="33dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ralewaybold"
                android:text="Facebook"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/google"
            android:layout_width="335dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rectengulargoogle"
            app:layout_constraintEnd_toEndOf="@+id/facebook"
            app:layout_constraintStart_toStartOf="@+id/facebook"
            app:layout_constraintTop_toBottomOf="@+id/facebook">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/google" />


            <TextView
                android:layout_width="165dp"
                android:layout_height="33dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ralewaybold"
                android:text="Google"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </LinearLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="25dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="25dp" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="25dp" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="25dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>